--- a/style.css
+++ b/style.css
@@ -22,8 +22,8 @@ nav > .nav-logo >h1> span{
 .nav-menu{
     width: 70%;
     display: flex;
-    /* background-color: red; */
     justify-content: space-between;
+    align-items: center;
 }
 nav > .nav-menu > ul{
     display: flex;
@@ -40,6 +40,9 @@ nav > .nav-menu > ul > li > a{
 }
 nav > .nav-menu > ul > li >a:hover{
     color: orangered;
+}
+.nav-button{
+    display: flex;
 }
 #signup{
     outline: none;
@@ -96,27 +99,28 @@ nav> .nav-button > button:hover{
     display: flex;
     justify-content: center;
 }
-.card-list{
-    display: flex;
-        justify-content: space-between;
-        align-items: center;
-        margin: 200px 0;
-}
-.img-container{
-    width: 50%;
+.right-img {
+    width: 100%;
     background-image: url('images/scorpion.jpg');
     background-size: cover;
     height: 400px;
     background-position: -10px -10px;
     border-radius: 10px;
 }
+.card-list{
+    display: flex;
+        justify-content: space-between;
+        align-items: center;
+        margin: 20px 0;
+}
+
 .card{
         width: 50%;
-        max-height: 400px;
-        margin: 20px;
+        min-height: 400px;
+        margin: 0 20px;
 }
 .img-container{
-    width: 400px;
+    width: 100%;
     height: 300px;
 }
 .bike-img{
@@ -186,4 +190,34 @@ footer > div > form > button {
     border: none;
     outline: none;
     background-color:rgb(14, 7, 58);
+}
+
+@media (max-width: 994px){
+    nav{
+        display: block;
+    }
+    .nav-menu{
+            width: 100%;
+            margin: 0;
+    }
+    .hero-section{
+        flex-wrap: wrap;
+        padding: 8px;
+        margin: 8px;
+    }
+    .left{
+        width: 100%;
+    }
+    .right{
+        width: 100%;
+    }
+    .card-list{
+        flex-wrap: wrap;
+        margin: 0;
+    }
+    .card{
+        width: 100%;
+        margin: 12px 0;
+        min-height: 400px;
+    }
 }
