--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body{
     margin: 0;
     padding: 0;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-
+    overflow-x: hidden;
 }
 nav{
     display: flex;
@@ -199,6 +199,7 @@ footer > div > form > button {
     .nav-menu{
             width: 100%;
             margin: 0;
+            display: block;
     }
     .hero-section{
         flex-wrap: wrap;
